# trigger

.github/workflows/: front-build-and-deploy.yml
backend/: .dockerignore  .env.dev.sample  .gitignore  README.md  build-db.sh  docker-compose.yml  install.sh
backend/app/: Dockerfile  app.py  cmd.sh  comps.py  config.py  database.py  init-mock-db.py  models.py  pyproject.toml  run.py  schema.py  utils.py
backend/app/migrations/versions/: 19b75ca39f8b_.py  1e27a66869d6_.py  3b9dd0fbd75d_.py  630e5e416f44_.py  724492699818_.py  b7599ace6f51_.py  beb605960301_.py  c8dd3426c38f_.py  fe518ff2e5a9_.py
backend/app/sample/: sample_aws.py  sample_twilio.py
backend/app/service/: aws.py
backend/app/services/: _sample.py
backend/app/services/aws/: __init__.py  aws.py  base.py
backend/app/swagger/: login.yml  register.yml
backend/app/tests/: cookie.txt  test-api.sh  test-result.txt  test_api.py
backend/db/mysql/init.d/: init.sql
backend/docs/: architecture.md  error.md  flow.md  implement.md
backend/nginx/: Dockerfile  nginx.conf
front/: README.md  package.json
front/src/: App.tsx  index.tsx  setupProxy.js
front/src/components/: AuthRequired.tsx  Chat.tsx  Header.tsx  PaymentStatus.tsx  ReloadOnBack.tsx  Url.ts
front/src/libs/: DateTime.ts  Number.tsx  ServerClient.ts  Url.ts
front/src/store/: actions.ts  store.tsx
front/src/views/: Company.tsx  CompanyDetail.tsx  Listen.tsx  Matching.tsx  Money.tsx  NotFound.tsx  SignIn.tsx  SignUp.tsx  Top.tsx
front/src/views/Matching/: Call.tsx  Create.tsx  Detail.tsx  index.tsx
