[tool.poetry]
authors = ["nukopy <pytwbf201830@gmail.com>"]
description = ""
name = "trigger"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
jinja2 = "^2.11.2"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.8.3"
ipython = "^7.15.0"
pytest = "^5.4.3"

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]
