[tool.poetry]
authors = ["nukopy <pytwbf201830@gmail.com>"]
description = ""
name = "trigger"
version = "0.1.0"

[tool.poetry.dependencies]
Flask-Migrate = "^2.5.3"
PyMySQL = "^0.10.1"
SQLAlchemy = "^1.3.19"
WTForms-SQLAlchemy = "^0.2"
flasgger = "^0.9.5"
flask = "^1.1.2"
flask-sqlalchemy = "^2.4.4"
flask_marshmallow = "^0.14.0"
jinja2 = "^2.11.2"
marshmallow-sqlalchemy = "^0.23.1"
python = "^3.8"
boto3 = "^1.15.9"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.8.3"
flask-shell-ipython = "^0.4.1"
ipython = "^7.15.0"
pytest = "^5.4.3"

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]
